# aggsim

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: README.md  simulator.py
src/aggsim/simulator/: aggregate_simulator.py  pipeline_simulator.py  source_simulator.py
src/aggsim/stats/: avg_stat.py  base_stat.py  sum_stat.py
src/aggsim/util/: common.py  win_and_pane_boundary_calculator.py
