[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aggsim"
version = "0.1.0"
description = "Event-stream aggregation simulator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas>=1.0",
  "sortedcontainers>=2.0"
]

[tool.setuptools]
# Use src layout
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
